2018-05-11  Chris Dumez  <cdumez@apple.com>

        REGRESSION (async policy delegate): Revoking an object URL immediately after triggering download breaks file download
        https://bugs.webkit.org/show_bug.cgi?id=185531
        <rdar://problem/39909589>

        Reviewed by Geoffrey Garen.

        Add a default constructor for CompletionHandlerCallingScope, for convenience.

        * wtf/CompletionHandler.h:

2018-05-11  Saam Barati  <sbarati@apple.com>

        Don't allocate value profiles when the JIT is disabled
        https://bugs.webkit.org/show_bug.cgi?id=185525

        Reviewed by Michael Saboff.

        * wtf/RefCountedArray.h:
        (WTF::RefCountedArray::RefCountedArray):

2018-05-10  Tim Horton  <timothy_horton@apple.com>

        Fix the build after r231393
        https://bugs.webkit.org/show_bug.cgi?id=185519
        <rdar://problem/40131741>

        Reviewed by Simon Fraser.

        * wtf/Platform.h:

2018-05-09  Michael Catanzaro  <mcatanzaro@igalia.com>

        [WPE] Build cleanly with GCC 8 and ICU 60
        https://bugs.webkit.org/show_bug.cgi?id=185462

        Reviewed by Carlos Alberto Lopez Perez.

        * wtf/HashTable.h:
        (WTF::HashTableBucketInitializer<true>::initialize): Since -Wclass-memaccess warning. This
        is probably safe enough, since it's for an empty bucket.
        * wtf/StdLibExtras.h:
        (WTF::bitwise_cast): Silence -Wclass-memaccess as we use type traits to ensure safety here.
        * wtf/Vector.h: Ditto, all uses are safe.
        * wtf/glib/WTFGType.h: Silence -Wcast-function-type.

2018-05-09  Yusuke Suzuki  <utatane.tea@gmail.com>

        [ARMv7] Drop ARMv7 disassembler in favor of capstone
        https://bugs.webkit.org/show_bug.cgi?id=185423

        Reviewed by Michael Catanzaro.

        Remove USE_ARMV7_DISASSEMBLER. Just use Capstone.

        * wtf/Platform.h:

2018-05-06  Yusuke Suzuki  <utatane.tea@gmail.com>

        [JSC][GTK][JSCONLY] Use capstone disassembler