@@ -1,3 +1,15 @@
+2018-05-13  Filip Pizlo  <fpizlo@apple.com>
+
+        Disable pointer poisoning
+        https://bugs.webkit.org/show_bug.cgi?id=185586
+
+        Reviewed by Yusuke Suzuki.
+        
+        This seems like a 0.3% speed-up on microbenchmarks. It seems like it may be a small speed-up on
+        other tests, too.
+
+        * wtf/Platform.h:
+
 2018-05-11  Chris Dumez  <cdumez@apple.com>
 
         REGRESSION (async policy delegate): Revoking an object URL immediately after triggering download breaks file download
